# world-building-in-haskell

./: LICENSE  README.md  berlin.cabal  iso-mappings.json  tile-mappings.json
app/: Main.hs
app/Example/: Annealing.hs  Cave2d.hs  Cave3d.hs  CaveSprites.hs  Clustering.hs  Isometric.hs  Mountains.hs  Noise.hs  WFC.hs
src/: Generator.hs  Map.hs  Render.hs
src/Data/: Vect.hs
src/Data/Nat/: Extra.hs
src/Generator/: Noise.hs  Smoother.hs  WaveFunctionCollapse.hs
src/Map/: Coordinate.hs  Kernel.hs  Slice.hs  Type.hs
src/Render/: Isometric.hs  Pixels.hs  Sprites.hs
