cabal-version:       >=1.10

name:                berlin
version:             0.1.0.0
license-file:        LICENSE
author:              Tom Harding
maintainer:          tomjharding@live.co.uk
build-type:          Simple

executable berlin
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , berlin
                     , containers
                     , JuicyPixels
                     , lens
                     , unicode-show
                     , unordered-containers
  default-language:    Haskell2010
  hs-source-dirs:      app
  ghc-options:         -Wall -Wextra
  other-modules: Example.Annealing
               , Example.Cave2d
               , Example.Cave3d
               , Example.CaveSprites
               , Example.Clustering
               , Example.Mountains
               , Example.Noise
               , Example.WFC
               , Example.Isometric

library
  exposed-modules: Generator
                 , Map
                 , Render

  other-modules: Data.Nat.Extra
               , Data.Vect
               , Generator.Noise
               , Generator.Smoother
               , Generator.WaveFunctionCollapse
               , Map.Coordinate
               , Map.Kernel
               , Map.Slice
               , Map.Type
               , Render.Isometric
               , Render.Pixels
               , Render.Sprites

  build-depends:       base
                     , JuicyPixels
                     , QuickCheck
                     , aeson
                     , containers
                     , containers
                     , generic-lens
                     , filepath
                     , fin
                     , hsnoise
                     , logict
                     , lens
                     , mtl
                     , normaldistribution
                     , primitive
                     , random
                     , transformers
                     , unicode-show
                     , vector
                     , ghc-typelits-natnormalise
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wextra
